--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "storybook:build": "tsc && build-storybook"
   },
   "dependencies": {
+    "@holochain-open-dev/context": "github:holochain-open-dev/context#ui-build",
     "@open-wc/scoped-elements": "^2.0.0-next.4",
     "golden-layout": "github:guillemcordoba/golden-layout",
     "lit": "^2.0.0-rc.2"
@@ -53,6 +54,7 @@
       "@typescript-eslint"
     ],
     "rules": {
+      "no-new": "off",
       "import/extensions": "off",
       "no-param-reassign": "off",
       "no-unused-vars": "off",
