--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "start": "npm run build && concurrently -k -r \"npm run build:watch\" \"wds\"",
     "build": "rimraf dist && rollup -c rollup.config.js",
     "build:watch": "rollup -c rollup.config.js -w",
-    "prepare": "npm run build",
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
     "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
     "storybook": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wds -c .storybook/server.mjs\"",
-    "storybook:build": "tsc && build-storybook"
+    "storybook:build": "tsc && build-storybook",
+    "publish-to-branch": "npm run build && gh-pages -d ./ -b build"
   },
   "dependencies": {
     "@holochain-open-dev/context": "github:holochain-open-dev/context#ui-build",
@@ -33,6 +33,7 @@
     "concurrently": "^5.3.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^7.2.0",
+    "gh-pages": "^3.2.3",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "postcss-url": "^10.1.3",
