--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "@holochain-open-dev/context": "github:holochain-open-dev/context#ui-build",
     "@open-wc/scoped-elements": "^2.0.0-next.4",
-    "golden-layout": "github:guillemcordoba/golden-layout",
     "lit": "^2.0.0-rc.2"
   },
   "devDependencies": {
@@ -34,6 +33,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^7.2.0",
     "gh-pages": "^3.2.3",
+    "golden-layout": "github:guillemcordoba/golden-layout#build",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "postcss-url": "^10.1.3",
@@ -55,6 +55,7 @@
       "@typescript-eslint"
     ],
     "rules": {
+      "import/no-extraneous-dependencies": "off",
       "no-new": "off",
       "import/extensions": "off",
       "no-param-reassign": "off",
