--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scoped-elements/golden-layout",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Custom Elements that export the [golden-layout](https://github.com/golden-layout/golden-layout) library using the [scoped-elements mixin](https://www.npmjs.com/package/@open-wc/scoped-elements/v/1.0.3)",
   "author": "guillem.cordoba@gmail.com",
   "license": "MIT",
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@lit-labs/context": "^0.2.0",
-    "@open-wc/scoped-elements": "^2.1.4",
+    "@lit-labs/observers": "^1.1.0",
     "lit": "^2.2.0"
   },
   "devDependencies": {
