--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scoped-elements/golden-layout",
-  "version": "0.2.0",
+  "version": "0.2.4",
   "description": "Custom Elements that export the [golden-layout](https://github.com/golden-layout/golden-layout) library using the [scoped-elements mixin](https://www.npmjs.com/package/@open-wc/scoped-elements/v/1.0.3)",
   "author": "guillem.cordoba@gmail.com",
   "license": "MIT",
@@ -37,7 +37,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^7.2.0",
     "gh-pages": "^3.2.3",
-    "golden-layout": "github:guillemcordoba/golden-layout#build",
+    "golden-layout": "github:guillemcordoba/golden-layout#gh-pages",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "postcss-url": "^10.1.3",
@@ -66,13 +66,5 @@
   "prettier": {
     "singleQuote": true,
     "arrowParens": "avoid"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.ts": ["eslint --fix", "prettier --write"]
   }
 }
