--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lit": "^2.2.0"
   },
   "devDependencies": {
+    "@fontsource/aileron": "^5.0.5",
     "@open-wc/eslint-config": "^4.3.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.5",
